# roma_aeterna

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/agent/: base.py  status_effects.py
src/core/: logger.py
src/engine/: chaos.py  loop.py  navigation.py  weather.py
src/gui/: camera.py  renderer.py
src/llm/: prompts.py  worker.py
src/roma_aeterna/: __init__.py  config.py  diagnose.py  main.py
src/roma_aeterna/agent/: animal.py  autopilot.py  base.py  constants.py  interactions.py  memory.py  neuro.py  pathfinding.py  perception.py  recording.py  status_effects.py
src/roma_aeterna/core/: events.py  persistence.py
src/roma_aeterna/engine/: chaos.py  economy.py  loop.py  weather.py
src/roma_aeterna/gui/: assets.py  camera.py  renderer.py
src/roma_aeterna/llm/: actions.py  mock.py  parser.py  personalities.py  prompts.py  worker.py
src/roma_aeterna/tools/: agent_diagnostics.py  agent_logger.py  log_viewer.py
src/roma_aeterna/world/: components.py  generator.py  items.py  map.py  objects.py
src/world/: components.py  generator.py  items.py
