[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roma-aeterna"
version = "0.1.0"
description = "Agent-Based Ancient World Simulator"
readme = "README.md"
authors = [
  { name = "Bryan Cardenas" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pygame",
    "numpy",
    "noise",
    "requests",
    "colorlog",
    "openai",
    "vllm"
]

[project.scripts]
roma-aeterna = "roma_aeterna.main:main"

[project.urls]
"Homepage" = "https://github.com/your-username/rome-aeterna"

[tool.setuptools.packages.find]
where = ["src"]
